# examplepydir

./: Makefile
fruit/: LICENSE  README.md  setup.cfg
fruit/src/: main.py
fruit/src/fruit.egg-info/: PKG-INFO  SOURCES.txt
fruit/src/fruit/apple/: __init__.py  apple.py  setup.cfg
fruit/src/fruit/banana/: __init__.py  banana.py  setup.cfg
fruit/src/fruit/banana/peeler/: __init__.py  peeler.py
server/: Pipfile  server.py
